Update 'vnwkhku84-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:2f4e372b33f56b2b558275f244cb7c791963670e@sha256:15da2ca849246f6f1f7f9b14f5a9f0027f502900ec562d8c7deac97159e60888

--- a/components/vnwkhku84-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/vnwkhku84-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: vnwkhku84-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:2f4e372b33f56b2b558275f244cb7c791963670e@sha256:15da2ca849246f6f1f7f9b14f5a9f0027f502900ec562d8c7deac97159e60888
+          name: container-image
